--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+/public/css/app.css.map
+/public/js
+/public/css/app.css
+/public/mix-manifest.json
+/storage/tmp/
